@@ -1132,8 +1132,10 @@ void xiosigaction_hasread(int signum
 	    diag_in_handler = 0;
 	    errno = _errno;
 	    return;
+	 } else if (pid < 0 && errno == EINTR) {
+	    Info1("xiosigaction_hasread(): %s", strerror(errno));
 	 } else if (pid < 0 && errno == ECHILD) {
-	    Msg(wassig?E_INFO:E_WARN,
+	    Msg(wassig?E_INFO:E_NOTICE,
 		 "waitpid(-1, {}, WNOHANG): "F_strerror);
 	    Info("xiosigaction_hasread() finished");
 	    Debug("xiosigaction_hasread() ->");
